# diagnostix

./: .gitignore  CLAUDE.md  DECISIONS.md  README.md  deploy.sh
.claude/: settings.local.json
.github/workflows/: deploy.yml
Nouveau dossier/: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  package-lock.json
Nouveau dossier/backend/: .dockerignore  Dockerfile  pyproject.toml
Nouveau dossier/backend/alembic/: env.py
Nouveau dossier/backend/alembic/versions/: 0001_initial_schema.py
Nouveau dossier/backend/app/: __init__.py  config.py  database.py
Nouveau dossier/backend/app/api/: __init__.py
Nouveau dossier/backend/app/api/v1/: __init__.py  reports.py
Nouveau dossier/backend/app/core/: __init__.py  ci_fiscal.py
Nouveau dossier/backend/app/models/: __init__.py  audit_log.py  question.py  setting.py
Nouveau dossier/backend/app/schemas/: __init__.py
Nouveau dossier/backend/app/scripts/: seed_initial_data.py
Nouveau dossier/backend/tests/: conftest.py
Nouveau dossier/backend/tests/unit/: test_ci_fiscal.py
Nouveau dossier/docs/: architecture.md
Nouveau dossier/frontend/: .dockerignore  Dockerfile  index.html  tailwind.config.ts
Nouveau dossier/frontend/src/: main.tsx
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0002_add_reports_status.py
backend/app/: main.py
backend/app/core/: security.py
backend/app/models/: report.py
backend/app/schemas/: question.py  report.py  response.py
backend/app/scripts/: reset_admin_password.py  seed_initial_data.py
backend/app/services/: __init__.py  ai_service.py  email_service.py  ml_engine.py  report_service.py  risk_engine.py  scoring_engine.py
backend/app/templates/: report.html
backend/ml_artifacts/: turnover_gb.joblib
backend/nexus_diagnostix_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: train_models.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_admin_api.py  test_questionnaire_api.py
backend/tests/unit/: test_ai_service.py  test_email_service.py  test_ml_engine.py  test_report_service.py  test_risk_engine.py  test_scoring_engine.py
docs/: api.md  ml-methodology.md  security.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/coverage/: index.html  lcov.info
frontend/coverage/lcov-report/: index.html
frontend/coverage/lib/: api.ts.html  index.html  utils.ts.html
frontend/coverage/pages/: AdminDashboard.tsx.html  AdminLogin.tsx.html  DiagnosticStart.tsx.html  Generating.tsx.html  Landing.tsx.html  NotFound.tsx.html  Questionnaire.tsx.html  ReportView.tsx.html  index.html
frontend/src/: App.tsx
frontend/src/pages/: AdminDashboard.tsx  AdminLogin.tsx  DiagnosticStart.tsx  Generating.tsx  Landing.tsx  NotFound.tsx  (+2 more)
helm/: .helmignore  Chart.yaml  values-production.yaml  values-secret.yaml.example  values.yaml
helm/templates/: _helpers.tpl  backend-deployment.yaml  backend-migrate-job.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  pvc-ml.yaml  pvc-reports.yaml  secret.yaml
nexus-diagnostix (2)/nexus-diagnostix/: .env.example  PREVIEW.html  README.md
(+63 files in other folders)
