[project]
name = "nexus-diagnostix-backend"
version = "1.0.0"
description = "Backend FastAPI de Nexus-Diagnostix — diagnostic RH IA-native"
authors = [{ name = "OpenLab Consulting", email = "tech@openlabconsulting.com" }]
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
readme = "README.md"

dependencies = [
    # Web framework
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "python-multipart==0.0.12",

    # Validation
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "email-validator==2.2.0",

    # Database
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "alembic==1.13.3",
    "psycopg2-binary==2.9.9",  # pour Alembic offline

    # Cache / queue
    "redis==5.0.8",

    # Auth & security
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "cryptography==43.0.1",

    # AI
    "anthropic==0.40.0",

    # ML
    "scikit-learn==1.5.2",
    "joblib==1.4.2",
    "numpy==1.26.4",
    "pandas==2.2.3",

    # PDF
    "weasyprint==62.3",
    "jinja2==3.1.4",
    "qrcode[pil]==7.4.2",

    # Email
    "aiosmtplib==3.0.2",
    "sendgrid==6.11.0",

    # HTTP
    "httpx==0.27.2",

    # Logging & observability
    "structlog==24.4.0",

    # Misc
    "python-dotenv==1.0.1",
    "tenacity==9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "fakeredis==2.24.1",
    "testcontainers[postgres]==4.8.1",
    "ruff==0.6.9",
    "mypy==1.11.2",
    "types-passlib",
    "pip-audit==2.7.3",
    "mutmut==2.5.1",
    "locust==2.31.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["alembic/versions", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E", "W",      # pycodestyle
    "F",           # pyflakes
    "I",           # isort
    "B",           # bugbear
    "UP",          # pyupgrade
    "C4",          # comprehensions
    "ASYNC",       # async/await
    "S",           # bandit (security)
    "RUF",         # ruff-specific
]
ignore = ["S101"]  # autoriser assert dans les tests

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106", "S311"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = ["weasyprint.*", "qrcode.*", "sendgrid.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "unit: tests unitaires rapides",
    "integration: tests d'intégration (DB, Redis)",
    "slow: tests lents (> 1s)",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/main.py",
    "app/scripts/*",
    "alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 100
show_missing = true
skip_covered = false

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
